--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,10 @@ python-dotenv>=1.0.0
 schedule>=1.2.0
 pytz>=2023.3
 
+# News and sentiment analysis
+feedparser>=6.0.10
+newspaper3k>=0.2.8
+
+# Options data (if available)
+# yahooquery>=2.3.1  # For options data
+
