--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,11 @@ numpy>=1.24.0
 yfinance>=0.2.28
 scikit-learn>=1.3.0
 xgboost>=2.0.0
+lightgbm>=4.0.0
+catboost>=1.2.0
 ta>=0.11.0
+joblib>=1.3.0
+lxml>=4.9.0
 
 # Moomoo API
 # Note: Install Moomoo OpenAPI SDK separately
